# pico-lora

./: CMakeLists.txt  README.md  pico-LoRa.fzz
myProjects/: CMakeLists.txt
myProjects/myLoRaReceiverCallback/: CMakeLists.txt
myProjects/myLoRaSender/: CMakeLists.txt
src/: LoRa-RP2040.h
